--- a/myapp/templates/agregar_categoria.html
+++ b/myapp/templates/agregar_categoria.html
@@ -1,10 +1,13 @@
 {% extends 'base.html' %}
 {% block title %}Agregar Categoría{% endblock %}
 {% block content %}
+
+<div class="categoria_1">
 <h2>Agregar Categoría</h2>
 <form method="post">
     {% csrf_token %}
    {{ form.as_p }}
     <button type="submit">Guardar</button>
 </form>
+</div>
 {% endblock %}
