--- a/myapp/templates/agregar_cliente.html
+++ b/myapp/templates/agregar_cliente.html
@@ -1,10 +1,15 @@
 {% extends 'base.html' %}
 {% block title %}Agregar Cliente{% endblock %}
 {% block content %}
+<div class="agreagar">
 <h2>Agregar Cliente</h2>
 <form method="post">
     {% csrf_token %}
     {{ form.as_p }}
     <button type="submit">Guardar</button>
 </form>
+
+
+</div>
+
 {% endblock %}
